Change parsing to prefer exact match for items

--- a/default_config.json
+++ b/default_config.json
@@ -86,7 +86,7 @@
 
         "Cancel": 0
     },
-    "sushi-a-la-cart": [
+    "sushi-a-la-carte": [
         "Tuna",
         "Yellowtail",
         "Salmon",
